--- a/src/components/Images.css
+++ b/src/components/Images.css
@@ -1,4 +1,4 @@
-.imagesContainer {
+#imagesContainer {
     /* Prevent vertical gaps */
     line-height: 0;
     
@@ -10,35 +10,35 @@
     column-gap:           0px;
  }
  
- .imagesContainer img {
+ #imagesContainer img {
    /* Just in case there are inline attributes */
    width: 100% !important;
    height: auto !important;
  }
  
  @media (max-width: 1200px) {
-   .imagesContainer {
+   #imagesContainer {
    -moz-column-count:    4;
    -webkit-column-count: 4;
    column-count:         4;
    }
  }
  @media (max-width: 1000px) {
-   .imagesContainer {
+   #imagesContainer {
    -moz-column-count:    3;
    -webkit-column-count: 3;
    column-count:         3;
    }
  }
  @media (max-width: 800px) {
-   .imagesContainer {
+   #imagesContainer {
    -moz-column-count:    2;
    -webkit-column-count: 2;
    column-count:         2;
    }
  }
  @media (max-width: 400px) {
-   .imagesContainer {
+   #imagesContainer {
    -moz-column-count:    1;
    -webkit-column-count: 1;
    column-count:         1;
